Fix Chatgpt and Notion Layout bugs

--- a/src/chatgpt/additional/modify_website.css
+++ b/src/chatgpt/additional/modify_website.css
@@ -4,7 +4,7 @@
 }
 
 /* Make Header smaller by moving it upward */
-body > a + div > div > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) {
+body > a + div > div > div:nth-of-type(1) > div:nth-of-type(1) > div.h-header-height:nth-of-type(1) {
     height: 26px;
 }
 
